First working version prepared for iteration
